// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders PublicReportSort with all prop options: {"selectedSortFilter":""} 1`] = `
"<z-badge type=\\"success\\" size=\\"md\\">
  <z-menu direction=\\"right\\" width=\\"small\\" class=\\"text-vanilla-100\\"></z-menu>
</z-badge>"
`;

exports[`renders PublicReportSort with all prop options: {"selectedSortFilter":"first-created"} 1`] = `
"<z-badge type=\\"success\\" is-dot=\\"true\\" size=\\"md\\">
  <zbutton-stub button-type=\\"secondary\\" size=\\"small\\" class=\\"text-vanilla-100 outline-none focus:outline-none\\">
    <div class=\\"flex items-center gap-x-2\\"><span class=\\"flex items-center gap-x-1\\"><zicon-stub icon=\\"first-seen\\"></zicon-stub> <span>Sort by first created</span></span>
      <zicon-stub icon=\\"x\\" size=\\"small\\"></zicon-stub>
    </div>
  </zbutton-stub>
</z-badge>"
`;

exports[`renders PublicReportSort with all prop options: {"selectedSortFilter":"last-created"} 1`] = `
"<z-badge type=\\"success\\" is-dot=\\"true\\" size=\\"md\\">
  <zbutton-stub button-type=\\"secondary\\" size=\\"small\\" class=\\"text-vanilla-100 outline-none focus:outline-none\\">
    <div class=\\"flex items-center gap-x-2\\"><span class=\\"flex items-center gap-x-1\\"><zicon-stub icon=\\"last-seen\\"></zicon-stub> <span>Sort by last created</span></span>
      <zicon-stub icon=\\"x\\" size=\\"small\\"></zicon-stub>
    </div>
  </zbutton-stub>
</z-badge>"
`;
